# simple-rag

./: langchain.py  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
